# liquid_biopsy

./: README.md  Snakefile  config.yaml  main.py  pyproject.toml
scripts/: alignment.py  ml_filter.py  qc.py  reporting.py  variant_calling.py
